Update and rename newHome.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p> <img class="logo-img" src="https://res.cloudinary.com/lorena02/image/upload/v1563992932/ourLogo_pauw2q.png" alt="Logo">
             <ul id="nav-list">
               <div class="navbar">
-                <a href="newHome.html">Home</a>
+                <a href="index.html">Home</a>
                 <div class="subnav">
                   <button class="subnavbtn">Puberty and Menstruation <i class="fa fa-caret-down"></i></button>
                   <div class="subnav-content">
