--- a/birthcontrol.html
+++ b/birthcontrol.html
@@ -57,19 +57,19 @@ div {
             <span class="tooltiptexta">Condoms are the most common type of birth control method. These thin pouches are made from either latex, plastic, or lambskin. This is a male condom that prevents sperm from entering the vagina and uterus, which means that the sperm cannot come in contact with the egg resulting in preventing pregnancy. This method is 85% effective and protects against STDs.</span>
             </div>
           <p><div class="tooltipa"><img id="implant" src="implant.png" style="width:175px;height:175px;"> <h4>IMPLANT</h4>
-            <span class="tooltiptexta">The Implant is a hormonal birth control that is inserted under the skin on the upper arm, and is only about the size of a matchstick. This form of birth control can last up to 5  years, 99% effective and does not protect against STDs.</span>
+            <span class="tooltiptexta">The Implant is a hormonal birth control that is inserted under the skin on the upper arm, and is only about the size of a matchstick. This form of birth control can last up to 5 years, 99% effective and does not protect against STDs.</span>
             </div>
           <p><div class="tooltipa"><img id="diaphragm" src="diaphragm.png" style="width:175px;height:175px;"> <h4>DIAPHRAGM</h4>
             <span class="tooltiptexta">A diaphragm is a form of birth control that's a shallow cup, shaped like a little saucer that's made of soft silicone. You bend it in half and insert it inside your vagina to cover your cervix. This method is 88% effective and does not protect against STDs.</span>
             </div>
           <p><div class="tooltipa"><img id="patch" src="patch.png" style="width:175px;height:175px;"> <h4>PATCH</h4>
-            <span class="tooltiptexta">The patch is a wallet friendly form of birth control. It is a patch applied to either the upper arm, butt, back, or belly, where it releases estrogen and progestin into the body to prevent pregnancy. You wear the patch for a week and replace it with another patch for three weeks. The fourth week is a week where you have your period and restart the cycle the following week. This method is 91% effective and does not protect against STDs.</span>
+            <span class="tooltiptexta">The patch is a wallet friendly form of birth control. It is a patch applied to either the upper arm, butt, back, or belly, where it releases estrogen and progestin into the body to prevent pregnancy. You wear the patch for a week and replace it with another patch for a duration of three weeks. The fourth week is a week where you have your period and restart the cycle the following week. This method is 91% effective and does not protect against STDs.</span>
             </div>
           <p><div class="tooltipa"><img id="internalcondoms" src="internalcondoms.png" style="width:175px;height:175px;"> <h4>INTERNAL CONDOM</h4>
             <span class="tooltiptexta">This type of condom offers the same benefits as a regular condom, but goes into the vagina rather than the penis, which is why it is often referred to as the "female condom". This cannot be used in adjacent with the male condom, as the friction between the two can cause them to break. This method is 79% effective and can protect against STDs.</span>
             </div>
           <p><div class="tooltipa"><img id="sponge" src="sponge.png" style="width:175px;height:175px;"> <h4>SPONGE</h4>
-            <span class="tooltiptexta">The sponge is a sponge that is inserted into the vagina and blocks sperm from reaching the cervix.  Sponges have spermicide that also kills sperm to provide even more protection against pregnancy. They are 76-88% effective.
+            <span class="tooltiptexta">The sponge is a sponge that is inserted into the vagina and blocks sperm from reaching the cervix.  Sponges have spermicide that also kills sperm to provide even more protection against pregnancy. They are 76-88% effective and do not protect against STDs.
             </div>
           <p><div class="tooltipa"><img id="withdrawl" src="withdrawl.png" style="width:175px;height:175px;"> <h4>WITHDRAWL</h4>
             <span class="tooltiptexta">The "pull out" method is when the person pulls the penis out out of the vagina before ejaculating. This is a circumstantial method, meaning everyone is different and some might mess up when attempting to do this method. This method is best when combined with other birth control such as hormonal birthcontrol. This method is 78% effective and does not protect against STDs.</span>
