--- a/resources.html
+++ b/resources.html
@@ -73,7 +73,7 @@
 
 
     <center><h2> Menstruation </h2>
-<p><a href="https://www.womenshealth.gov/menstrual-cycle/your-menstrual-cycle">What is Mentruation?</a></p>
+<p><a href="https://www.womenshealth.gov/menstrual-cycle/your-menstrual-cycle">What is Menstruation?</a></p>
 <p><a href="https://kidshealth.org/en/kids/pads-tampons.html?WT.ac=k-ra">About Pads and Tampons</a></p>
 <p><a href="https://www.healthline.com/health/facts-statistics-menstruation#1">Facts and Statistics</a></p>
 <p><a href="https://www.plannedparenthood.org/learn/birth-control">About your Birth Control Options</a></p>
