--- a/puberty.html
+++ b/puberty.html
@@ -72,7 +72,7 @@
 <body>
   
   <h2 style="text-align:center";>What is Puberty?</h2>
-<p style="text-align:center";>Puberty happens when kids are around 8-13 years old.  It might be confusing time because your body starts to change and it might be some getting use to your developing body. Some signs that you might notice happening to you might be: </p>
+<p style="text-align:center";>Puberty happens when kids are around 8-13 years old.  It might be a confusing time because your body starts to change and it might be hard getting use to your developing body. Some signs that you might notice happening to you might be: </p>
 <style>
   ul.a {
   list-style-type: circle;
