--- a/puberty.html
+++ b/puberty.html
@@ -97,7 +97,7 @@
   <li>Increase of height or weight</li>
   <li>Growing pains</li>
 <h2 style="text-align:center";>Puberty Blockers </h2>
-  <p style="text-align:center";>Going through puberty can be difficult for people whose body does not reflect to their gender identity. After talking to your gardian about this you can talk to your doctor about taking treatment to get treatment. This medicine blocks two harmones that change our body called testosterone and estrogen.</p>
+  <p style="text-align:center";>Going through puberty can be difficult for people whose body does not reflect to their gender identity. After talking to your gardian about this you can talk to your doctor about taking and getting treatment. This medicine blocks two harmones that change our body called testosterone and estrogen.</p>
   <li> A flexible rod called histrelin acetate that goes under the skin of the arm and lasts for 1 year.</li>
   <li>A shot called leuprolide acetate, which works for 1, 3, or 4 months at a time.</li>
 <h2 style="text-align:center";>Stats and Info </h2>
