--- a/painRelief.html
+++ b/painRelief.html
@@ -86,7 +86,7 @@
 <ul class="a">
   <li>PainKillers: Take ibuprofin(advil) or acetaminophen(tylenol). Take the medicine before your period starts to avoid the pain. If this doesn't work talk to your doctor to get something stronger.</li>
   <li>Heat: Put heating pad, warm cloth or water bottle on your belly to sooth your belly.</li>
-  <li>Shower: Take a warm shawer or bath</li>
+  <li>Shower: Take a warm shower or bath</li>
   <li>Use pads instead of tampons</li>
   <li>Exercise: Go on walks or do light exercises</li>
   <li>Massages: Rub your belly or back to relieve some of the pain</li>
@@ -95,6 +95,6 @@
   <li>Hormonal birth control: Talk to your doctor about taking pill.</li>
   <li>Naps:Taking a 10-20 minute nap before 4pm can be refreshing and energizing (Don't forget to sleep 8 hrs of sleep).</li>
 </ul>
-<p> If nothing is helping you feel better talk to a doctor.</p>
+<p> If nothing is helping you feel better talk, to a doctor.</p>
 </body>
 </html>
