--- a/stds.html
+++ b/stds.html
@@ -50,7 +50,7 @@
     <div class="row">
       <div class="column"style="background-color:#cce5ff; text-align:left;">
         <h2><center>What and How?</center></h2>
-        <p><b>STDs vs STIs:</b> STD stands for sexually transmitted disease and STI stands for sexually transmitted infection, STI is more accurate however they mean the are the same thing. </p>
+        <p><b>STDs vs STIs:</b> STD stands for sexually transmitted disease and STI stands for sexually transmitted infection, STI is more accurate however they mean the same thing. </p>
         <p>STD's are caused by bacteria, parasites, yeast, and viruses. Antibiotics can usually cure STD's caused by bacteria, parasites, yeast, and viruses. There is no cure for STD's caused by viruses but there are medications used to reduce symptom and control the disease.</p>
         <p>STDs effects both men and women, however they tend to have more severe health problems in women and if the women is pregnant it can cause health poblems for the baby.</p>
         <p><b>Symptoms: </b>Even though some STD's do not have symptoms, making them asymptomatic, many do. Possible symptoms include: painful urination, lower abdominal pain, unusual discharge from both male and female genitals, and many others.  Women can also have pain during sexual intercourse and vaginal bleeding between periods. Men can also have testicular pain.
