--- a/stds.html
+++ b/stds.html
@@ -68,7 +68,7 @@
         <h2><center>Prevention and Testing</center></h2>
         <p>In order to prevent getting STDs it is important to practice safer sex (also known as safe sex). Safer sex is all about protecting yourself and your partners from sexually transmitted infections.</p>
         <p><b>Using Barriers: </b>There are several methods possible for practicing safer sex.  The first method is putting a physical barrier between you and your partner during sex. This can be in the form of condoms, internal condoms, and dental damns. These barriers prevent you and your parnter from body fluids and some skin to skin contact that could potentially spread STDs.</p>
-        <p><b>Getting Tested: </b>Since many STDs do not have symptoms testing is the only way to be sure that you and/or your partner do not have an STD. Getting tested regulalrly is a vwery important part of safer sex.
+        <p><b>Getting Tested: </b>Since many STDs do not have symptoms testing is the only way to be sure that you and/or your partner do not have an STD. Getting tested regulalrly is a very important part of safer sex.
         <p>Refrianing from taking substances like drugs and alcohol is also a way of practicing safer sex. When under the influence, it is easy to lose sight of the importance of practicing safer sex, resulting in possibly harmful decisions.
       </div>
       </div>
