--- a/aboutUs.html
+++ b/aboutUs.html
@@ -145,15 +145,16 @@ div.desc {
 <div class="w3-quarter">
 <img src="IMG_1752.jpg" alt="Lorena" style="width:15%" class="w3-circle w3-hover-opacity">
 <h3 style="font-size:25px;text-align:center;color:SteelBlue;">Lorena Reynoso</h3>
-<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I am 16 and Mexican American.</p>
-<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I am the oldest of two younger sibilings, as well as a rising junior at LCCS.</p>
-<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I enjoy playing soccer, and hanging out with friends.</p>
+<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> Hi! I'm Lorena. A little about myself is that I'm 16 years old and Mexican American.</p>
+<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I enjoy playing soccer, hanging out with friends and binge watching shows on Netflix.</p>
+<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I am the oldest of two younger sibilings, as well as a rising junior at LCCS. 
+  Being first gen in my family is a big responsibilty and I want to be a row model for my syblings for them to look up to and be proud of. </p>
 </div>
 
 <div class="w3-quarter">
 <img src="fatima.jpg" alt="Fatima" style="width:15%" class="w3-circle w3-hover-opacity">
 <h3 style="font-size:25px;text-align:center;color:SteelBlue">Fatima Ramirez</h3>
-<p style= "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> hey, my name is Fatima Ramirez, I am Mexican American and 17 years old.
+<p style= "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> Hey, my name is Fatima Ramirez, I am Mexican American and 17 years old.
 <p style="text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I am an incoming senior at  Berkeley High School. I enjoy going to the gym,
 <p style="text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;">and spending time with friends/family. This website is our final project
 <p style="text-align:center;font-size:35%;font-family:'Raleway',Sans-serif;"> for our 7 week immersion program ‘Girls Who Code’.It’s been a great experience
