--- a/aboutUs.html
+++ b/aboutUs.html
@@ -147,8 +147,8 @@ div.desc {
 <h3 style="font-size:25px;text-align:center;color:SteelBlue;">Lorena Reynoso</h3>
 <p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> Hi! I'm Lorena. A little about myself is that I'm 16 years old and Mexican American.</p>
 <p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I enjoy playing soccer, hanging out with friends and binge watching shows on Netflix.</p>
-<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I am the oldest of two younger sibilings, as well as a rising junior at LCCS. 
-  Being first gen in my family is a big responsibilty and I want to be a row model for my syblings for them to look up to and be proud of. </p>
+<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> I am the oldest of two younger sibilings, as well as a rising junior at LCCS.</p>
+<p style = "text-align:center;font-size:35%;font-family:'Raleway',Sans-Serif;"> Being first gen in my family is a big responsibilty and I want to be a row model for my syblings for them to look up to and be proud of. </p>
 </div>
 
 <div class="w3-quarter">
