--- a/puberty.html
+++ b/puberty.html
@@ -74,7 +74,7 @@
   <h2 style="font-family:'Lucida Console', monospace; font-size: 30px; text-align:center;">
     What is Puberty?
   </h2>
-<p style="text-align:center; font-family:'Lucida Console', monospace; font-size: 20px;">Puberty happens when kids are around 8-13 years old.  It might be confusing time because your body starts to change and it might be some getting use to your developing body. Some signs that you might notice happening to you might be: </p>
+<p style="text-align:center; font-family:'Lucida Console', monospace; font-size: 20px;">Puberty happens around the age of 8-13 years old. It can be a confusing time because your body starts to change and it might take some time getting use to your developing body. Some signs you might notice happening to you could possibly be: </p>
 <style>
   ul.a {
   list-style-type: circle;
