--- a/menstruation.html
+++ b/menstruation.html
@@ -82,18 +82,18 @@ img {
 }
 </style>
   <img src="period.jpg" style="width:250px;height:400px;">
-  <p style="text-align:center";>Every month, tissue and blood buildup in the uterus to prepare for a fertilized egg.If the egg is not fertilized, the lining leaves the body through the vagina.Menstrual cycles last between 21 and 35 days.</p>
-  <h3 style="text-align:center;">Signs and symptoms that you might get your period Soon!</h3>
+  <p style="text-align:center";>Every month, tissue and blood buildup in the uterus to prepare for a fertilized egg. If the egg is not fertilized, the lining leaves the body through the vagina. Menstrual cycles last between 21 and 35 days but this varies for each persons body.</p>
+  <h3 style="text-align:center;">Signs and symptoms that you might get your period soon!</h3>
 <ul class="b">
   <li>Acne</li>
   <li>Breasts are tender or swollen</li>
-  <li>fatigue</li>
+  <li>Fatigue</li>
   <li>Cramps</li>
-  <li>Have Diarrhea or Constipation</li>
-  <li>Being bloated and Gassy</li>
-  <li>Headaches or Migraines</li>
-  <li>Mood Swings</li>
-  <li>Anxiety and Depression</li>
+  <li>Have diarrhea or constipation</li>
+  <li>Being bloated and gassy</li>
+  <li>Headaches or migraines</li>
+  <li>Mood swings</li>
+  <li>Anxiety and depression</li>
   <li>Lower back pain</li>
   <h3 style="text-align:center">See a Doctor If:</h3>
   <li>You have blood clots in your menstrual flow that are larger than a quarter.</li>
