--- a/menstruation.html
+++ b/menstruation.html
@@ -72,7 +72,7 @@
 </style>
 <body>
 
-  <h2 style="text-align:center";>What is a Period?</h2>
+  <h2 style="text-align:center; font- family: monospace; font-size: 30px;">What is a Period?</h2>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 img {
