--- a/menstruation.html
+++ b/menstruation.html
@@ -82,8 +82,8 @@ img {
 }
 </style>
   <img src="period.jpg" style="width:250px;height:400px;">
-  <p style="text-align:center";>Every month, tissue and blood buildup in the uterus to prepare for a fertilized egg. If the egg is not fertilized, the lining leaves the body through the vagina. Menstrual cycles last between 21 and 35 days but this varies for each persons body.</p>
-  <h3 style="text-align:center;">Signs and symptoms that you might get your period soon!</h3>
+  <p style="text-align:center; font-size: 22px;">Every month, tissue and blood buildup in the uterus to prepare for a fertilized egg. If the egg is not fertilized, the lining leaves the body through the vagina. Menstrual cycles last between 21 and 35 days but this varies for each persons body.</p>
+  <h3 style="text-align:center;font-size: 18px;">Signs and symptoms that you might get your period soon!</h3>
 <ul class="b">
   <li>Acne</li>
   <li>Breasts are tender or swollen</li>
