--- a/menstruation.html
+++ b/menstruation.html
@@ -83,7 +83,7 @@ img {
 </style>
   <img src="period.jpg" style="width:250px;height:400px;">
   <p style="text-align:center; font-size: 22px;">Every month, tissue and blood buildup in the uterus to prepare for a fertilized egg. If the egg is not fertilized, the lining leaves the body through the vagina. Menstrual cycles last between 21 and 35 days but this varies for each persons body.</p>
-  <h3 style="text-align:center;font-size: 18px;">Signs and symptoms that you might get your period soon!</h3>
+  <h3 style="text-align:center;font-size: 20px;">Signs and symptoms that you might get your period soon!</h3>
 <ul class="b">
   <li>Acne</li>
   <li>Breasts are tender or swollen</li>
@@ -95,7 +95,7 @@ img {
   <li>Mood swings</li>
   <li>Anxiety and depression</li>
   <li>Lower back pain</li>
-  <h3 style="text-align:center">See a Doctor If:</h3>
+  <h3 style="text-align:center; font-size: 20px;">See a Doctor If:</h3>
   <li>You have blood clots in your menstrual flow that are larger than a quarter.</li>
   <li>Your pain happens at times other than just before your period or during your period</li>
   <li>You get irregular periods after having normal cycles.</li>
